# ventiladron

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/vtron/: __about__.py  _reader.py  app.py  constants.py  manager.py
tests/: __init__.py
